# casexample

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
casexample/: asgi.py  settings.py  urls.py  views.py  wsgi.py
