[tool.poetry]
name = "cas-example"
version = "0.1.0"
description = ""
authors = ["Eduardo <e.git@xor.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-mama-cas = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.4"
pytest = "^6.2.3"
mypy = "^0.812"
pyflakes = "^2.3.1"
flake8 = "^3.9.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
